update project from Brandon's local repo

--- a/FakeBook/index.html
+++ b/FakeBook/index.html
@@ -6,6 +6,6 @@
     <title>FakeBook</title>
 </head>
 <body>
-    <h3>Nothing here for now, wait for future developments</h3>
+    <h3>Nothing here for now, wait for future developments.</h3>
 </body>
 </html>
