--- a/FakeBook/index.html
+++ b/FakeBook/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FakeBook</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Comic+Neue:300,300italic,regular,italic,700,700italic" rel="stylesheet" />
 </head>
 <body>
     <h3>Nothing here for now, wait for future developments.</h3>
