--- a/FakeBook/index.html
+++ b/FakeBook/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Comic+Neue:300,300italic,regular,italic,700,700italic" rel="stylesheet" />
 </head>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+<style>
+    body {
+      font-family: "Trirong", serif;
+    }
+    </style>
 <body>
     <h3>Nothing here for now, wait for future developments.</h3>
     <h5>Now with color!</h5>
