created the script.js file and linked to the index.html file

--- a/FakeBook/index.html
+++ b/FakeBook/index.html
@@ -9,5 +9,7 @@
 <body>
     <h3>Nothing here for now, wait for future developments.</h3>
     <h5>Now with color!</h5>
+
+<script src="script.js"></script>
 </body>
 </html>
