made comments a list

--- a/FakeBook/index.html
+++ b/FakeBook/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h3>Nothing here for now, wait for future developments.</h3>
-    <h5>Now with color!</h5>
+    <ul class="updates">
+        <li>Now with color!</li>
+        <li>still shit tho...</li>
+    </ul>
 
 <script src="script.js"></script>
 </body>
