--- a/FakeBook/index.html
+++ b/FakeBook/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FakeBook</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
 </head>
+
+
 <body>
     <h3>Nothing here for now, wait for future developments.</h3>
+    <h4 class="updates-header">updates</h4>
     <ul class="updates">
         <li>Now with color!</li>
         <li>still shit tho...</li>
@@ -15,4 +22,5 @@
 
 <script src="script.js"></script>
 </body>
+
 </html>
